--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="grid-container">
-      <div class="a"></div>
-      <div class="b"></div>
-      <div class="c"></div>
-      <div class="d"></div>
-      <div class="e"></div>
-      <div class="f"></div>
-      <div class="g"></div>
-      <div class="h"></div>
-      <div class="i"></div>
-      <div class="j"></div>
-    </div>
+    <main>
+      <div class="grid-container">
+        <div class="a">a</div>
+        <div class="b">b</div>
+        <div class="c">c</div>
+        <div class="d">d</div>
+        <div class="e">e</div>
+        <div class="f">f</div>
+        <div class="g">g</div>
+        <div class="h">h</div>
+        <div class="i">i</div>
+        <div class="j">j</div>
+      </div>
+    </main>
   </body>
 </html>
